feature TDI-22111 added : add BOTH_HADOOP field type to browse both hadoop file and directory on HDFS.
git-svn-id: http://talendforge.org/svn/tos/trunk@90019 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.hdfsbrowse/plugin.xml
+++ b/org.talend.designer.hdfsbrowse/plugin.xml
@@ -13,6 +13,11 @@
             mapping="DIRECTORY_HADOOP"
             name="Directory Hadoop">
       </generator>
+      <generator
+            class="org.talend.designer.hdfsbrowse.generators.HadoopResourceGenerator"
+            mapping="BOTH_HADOOP"
+            name="Both Hadoop">
+      </generator>
    </extension>
 
 </plugin>
