Fix Feature TDI-21337 : Sqoop Import component in Talend does not support free-form query imports https://jira.talendforge.org/browse/TDI-21337
git-svn-id: http://talendforge.org/svn/tos/trunk@90160 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -56,5 +56,10 @@ ADDITIONAL.ITEM.ADDITIONAL_ARGUMENT.ITEM.--package-name=--package-name
 
 OUTPUT_MESSAGE.NAME=Output Message
 
+QUERY_MODE.NAME=Query
+
 USE_QUERY.NAME=Use query
 QUERY.NAME=Query
+
+USE_SPLIT.NAME=Specify Split By
+SPLIT.NAME=
