Fix New Feature USV-32 : Remove context-menu for top level nodes https://jira.talendforge.org/browse/USV-32 updated all tis action provider so that they have an id.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@90257 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hcatalog/plugin.xml
+++ b/org.talend.repository.hcatalog/plugin.xml
@@ -77,7 +77,8 @@
             </and>
          </triggerPoints>
          <actionProvider
-               class="org.talend.repository.metadata.action.MetedataNodeActionProvier">
+               class="org.talend.repository.metadata.action.MetedataNodeActionProvier"
+               id="org.talend.hcatalog.action.provider.id">
             <enablement>
                <and>
                   <instanceof
