TDI-22738 fixed: Upgrade from Hive 0.8.1 to 0.9
git-svn-id: http://talendforge.org/svn/tos/branches/branch-5_1@90335 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.tishadoopprovider/components/tHiveInput/tHiveInput_messages.properties
+++ b/org.talend.designer.components.tishadoopprovider/components/tHiveInput/tHiveInput_messages.properties
@@ -35,3 +35,6 @@ CONNECTION_MODE.NAME=Connection mode
 CONNECTION_MODE.ITEM.EMBEDDED=Embedded
 CONNECTION_MODE.ITEM.STANDALONE=Standalone
 
+SET_TEMP_PATH.NAME=Set temporary path
+TEMP_PATH.NAME=
+TEMP_PATH_GROUP.NAME=Temporary Path
