--- a/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -45,3 +45,6 @@ CONNECTION_MODE.NAME=Connection mode
 CONNECTION_MODE.ITEM.EMBEDDED=Embedded
 CONNECTION_MODE.ITEM.STANDALONE=Standalone
 
+SET_TEMP_PATH.NAME=Set temporary path 
+TEMP_PATH.NAME= 
+TEMP_PATH_GROUP.NAME=Temporary Path 
