TDI-22739 fixed: Upgrade from Hive 0.8.1 to 0.9
git-svn-id: http://talendforge.org/svn/tos/trunk@90523 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -38,3 +38,6 @@ LINK_STYLE.ITEM.BEZIER_CURVE=Bezier curve
 LINK_STYLE.ITEM.LINE=Line (fastest)
 CONNECTION.NAME=Component List
 
+SET_TEMP_PATH.NAME=Set temporary path 
+TEMP_PATH.NAME= 
+TEMP_PATH_GROUP.NAME=Temporary Path 
