TDI-22811: Issue executing the tHiveInput against Hive from a remote client
git-svn-id: http://talendforge.org/svn/tos/trunk@90775 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -40,4 +40,16 @@ CONNECTION.NAME=Component List
 
 SET_TEMP_PATH.NAME=Set temporary path 
 TEMP_PATH.NAME= 
-TEMP_PATH_GROUP.NAME=Temporary Path 
+TEMP_PATH_GROUP.NAME=Temporary Path
+
+SET_MAPRED_JT.NAME=Set Jobtracker URI
+SET_FS_DEFAULT_NAME.NAME=Set Namenode URI
+MAPRED_JT.NAME=
+FS_DEFAULT_NAME.NAME=
+
+HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties 
+HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
+HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
+
+CONN.NAME=Connection
+HADOOP_PROPS.NAME=Hadoop properties
