Fix Feature TDI-22759: We should be able to get all rows from the tCassandraInput https://jira.talendforge.org/browse/TDI-22759
git-svn-id: http://talendforge.org/svn/tos/trunk@90989 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
@@ -7,7 +7,7 @@ COLUMN_FAMILY_TYPE.ITEM.STANDARD=Standard
 COLUMN_FAMILY_TYPE.ITEM.SUPER=Super
 COLUMN_FAMILY_TYPE.NAME=Column family type
 CONNECTION.NAME=Component List
-COUNT.NAME=Count
+COLUMN_LIMIT.NAME=Columns range limit
 KEY_SPACE.NAME=Keyspace
 HELP=org.talend.help.tCassandraInput
 HOST.NAME=Host
@@ -15,9 +15,12 @@ INC_KEY.NAME=Include key in output columns
 INC_SUPER_KEY.NAME=Include super key output columns
 KEYSPACE_CONFIGURATION.NAME=Keyspace configuration
 KEY_COLUMN.NAME=Key column
-KEY_END.NAME=End
+COLUMN_END.NAME=Columns range end
+KEY_END.NAME=Key end
 KEY_SPACE.NAME=Keyspace
-KEY_START.NAME=Start
+COLUMN_START.NAME=Columns range start
+KEY_START.NAME=Key start
+KEY_LIMIT.NAME=Key limit
 LONG_NAME=Read Data from a cassandra solution.
 NB_LINE.NAME=NB_LINE
 PASSWORD.NAME=Password
@@ -28,7 +31,9 @@ QUERY_CONFIGURATION.NAME=Query configuration
 REQUIRED_AUTHENTICATION.NAME=Required authentication
 REVERSED.NAME=Reversed
 ROW_KEYS.NAME=Row keys
-SUPER_COLUMN_KEYS.NAME=Super column keys
+SPECIFY_KEYS.NAME=Specify row keys
+SPECIFY_COLUMNS.NAME=Specify columns
+COLUMNS.NAME=Columns
 SUPER_KEY_COLUMN.NAME=Super key column
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
