TDI-21337: Refactor the tSqoopImport
git-svn-id: http://talendforge.org/svn/tos/trunk@91171 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tSqoopImport/tSqoopImport_messages.properties
@@ -17,7 +17,7 @@ VERBOSE.NAME=Verbose
 USE_MAPPERS.NAME=Specify Number of Mappers
 MAPPERS.NAME=
 USE_TARGET.NAME=Specify Target Dir
-TARGET.NAME=
+TARGET.NAME=Target directory
 APPEND.NAME=Append
 DIRECT.NAME=Direct
 COMPRESS.NAME=Compress
