Fix Bug TDI-22703: Problems related with Cassandra https://jira.talendforge.org/browse/TDI-22703
git-svn-id: http://talendforge.org/svn/tos/trunk@91742 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
@@ -11,10 +11,10 @@ COLUMN_LIMIT.NAME=Columns range limit
 KEY_SPACE.NAME=Keyspace
 HELP=org.talend.help.tCassandraInput
 HOST.NAME=Host
-INC_KEY.NAME=Include key in output columns
-INC_SUPER_KEY.NAME=Include super key output columns
+INC_KEY.NAME=Include raw key in output columns
+INC_SUPER_KEY.NAME=Include super columns in output columns
 KEYSPACE_CONFIGURATION.NAME=Keyspace configuration
-KEY_COLUMN.NAME=Key column
+KEY_COLUMN.NAME=Row key column
 COLUMN_END.NAME=Columns range end
 KEY_END.NAME=Key end
 KEY_SPACE.NAME=Keyspace
@@ -34,6 +34,6 @@ ROW_KEYS.NAME=Row keys
 SPECIFY_KEYS.NAME=Specify row keys
 SPECIFY_COLUMNS.NAME=Specify columns
 COLUMNS.NAME=Columns
-SUPER_KEY_COLUMN.NAME=Super key column
+SUPER_KEY_COLUMN.NAME=Super columns
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
