--- a/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraOutput/tCassandraOutput_messages.properties
@@ -32,10 +32,10 @@ DELETE_SUPER_COLUMN.NAME=Delete super columns
 DIE_ON_ERROR.NAME=Die on error
 HELP=org.talend.help.tCassandraOutput
 HOST.NAME=Host
-INC_KEY.NAME=Include key in columns
-INC_SUPER_KEY.NAME=Include super key in columns
+INC_KEY.NAME=Include row key in columns
+INC_SUPER_KEY.NAME=Include super columns in standard columns
 KEYSPACE_CONFIGURATION.NAME=Keyspace configuration
-KEY_COLUMN.NAME=Key column
+KEY_COLUMN.NAME=Row key column
 KEY_SPACE.NAME=Keyspace
 LONG_NAME=Output Data to a cassandra solution.
 NB_LINE.NAME=NB_LINE
@@ -44,6 +44,6 @@ PORT.NAME=Port
 PROPERTY.NAME=PROPERTY
 PROPERTYADVANCED.NAME=PROPERTYADVANCED
 REQUIRED_AUTHENTICATION.NAME=Required authentication
-SUPER_KEY_COLUMN.NAME=Super column key
+SUPER_KEY_COLUMN.NAME=Super columns
 USERNAME.NAME=Username
 USE_EXISTING_CONNECTION.NAME=Use existing connection
