bug TDI-23037 fixed : HDFS_fail to update repository for HDFS connection .
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@91974 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hdfs/plugin.xml
+++ b/org.talend.repository.hdfs/plugin.xml
@@ -115,5 +115,12 @@
             class="org.talend.repository.hdfs.ui.dnd.HDFSDragAndDropHandler">
       </RepositoryHandler>
    </extension>
+   <extension
+         point="org.talend.core.runtime.service">
+      <Service
+            class="org.talend.repository.hdfs.HDFSProviderService"
+            serviceId="IHDFSProviderService">
+      </Service>
+   </extension>
 
 </plugin>
