TDI-23234: Remove the "Experimental" tag for the Kerberos authentication in the HDFS and Pig components
git-svn-id: http://talendforge.org/svn/tos/trunk@92049 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSGet/tHDFSGet_messages.properties
@@ -43,7 +43,7 @@ PROXY_USERNAME.NAME=Proxy user
 USE_PROXY.NAME=Use Socks Proxy
 APPEND.NAME=Append
 
-USE_KRB.NAME=Use kerberos authentication (Experimental)
+USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 
 CONN.NAME=Connection
