--- a/org.talend.designer.components.bigdata/components/tHDFSRename/tHDFSRename_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSRename/tHDFSRename_messages.properties
@@ -36,7 +36,7 @@ DIE_ON_ERROR.NAME=Die on error
 NB_FILE.NAME=Number of files
 USE_EXISTING_CONNECTION.NAME=Use an existing connection
 
-USE_KRB.NAME=Use kerberos authentication (Experimental)
+USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 
 CURRENT_STATUS.NAME=Current Status
