--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -63,6 +63,6 @@ PARTITION_FILTER.NAME=Partition filter
 PARTITION_FILTER.ITEM.PART_NAME=Partition name
 PARTITION_FILTER.ITEM.PART_VALUE=Partition value
 
-USE_KRB.NAME=Use kerberos authentication (Experimental)
+USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 JOBTRACKER_PRINCIPAL.NAME=Jobtracker principal
