--- a/org.talend.designer.components.bigdata/components/tHDFSCompare/tHDFSCompare_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSCompare/tHDFSCompare_messages.properties
@@ -30,7 +30,7 @@ HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
-USE_KRB.NAME=Use kerberos authentication (Experimental)
+USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 
 COMPARISON_MODE.ITEM.BINARY_CMP=Compare in binary mode
