--- a/org.talend.designer.components.bigdata/components/tHDFSDelete/tHDFSDelete_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSDelete/tHDFSDelete_messages.properties
@@ -34,7 +34,7 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 DELETE_PATH.NAME=Delete Path
 CURRENT_STATUS.NAME=Current Status
 
-USE_KRB.NAME=Use kerberos authentication (Experimental)
+USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 
 CONN.NAME=Connection
