--- a/org.talend.designer.components.bigdata/components/tHDFSExist/tHDFSExist_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSExist/tHDFSExist_messages.properties
@@ -36,7 +36,7 @@ HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
 CURRENT_STATUS.NAME=Current Status
 
-USE_KRB.NAME=Use kerberos authentication (Experimental)
+USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 
 CONN.NAME=Connection
