--- a/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
@@ -34,7 +34,7 @@ HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
-USE_KRB.NAME=Use kerberos authentication (Experimental)
+USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 
 CONN.NAME=Connection
