--- a/org.talend.designer.components.bigdata/components/tHDFSPut/tHDFSPut_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSPut/tHDFSPut_messages.properties
@@ -44,7 +44,7 @@ PROXY_USERNAME.NAME=Proxy user
 USE_PROXY.NAME=Use Socks Proxy
 APPEND.NAME=Append
 
-USE_KRB.NAME=Use kerberos authentication (Experimental)
+USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
 
 CONN.NAME=Connection
