Fix Bug TDI-23265: Unable to insert date type into Cassandra correclty https://jira.talendforge.org/browse/TDI-23265 Note: 1.Fixed input some type not correct 2.Row key/Super column key support muilt type
git-svn-id: http://talendforge.org/svn/tos/trunk@92429 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
@@ -11,7 +11,7 @@ COLUMN_LIMIT.NAME=Columns range limit
 KEY_SPACE.NAME=Keyspace
 HELP=org.talend.help.tCassandraInput
 HOST.NAME=Host
-INC_KEY.NAME=Include raw key in output columns
+INC_KEY.NAME=Include row key in output columns
 INC_SUPER_KEY.NAME=Include super columns in output columns
 KEYSPACE_CONFIGURATION.NAME=Keyspace configuration
 KEY_COLUMN.NAME=Row key column
