--- a/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCassandraInput/tCassandraInput_messages.properties
@@ -31,8 +31,32 @@ QUERY_CONFIGURATION.NAME=Query configuration
 REQUIRED_AUTHENTICATION.NAME=Required authentication
 REVERSED.NAME=Reversed
 ROW_KEYS.NAME=Row keys
+ROW_KEY_TYPE.NAME=Row key type
+ROW_KEY_TYPE.ITEM.INTEGER=Integer
+ROW_KEY_TYPE.ITEM.LONG=Long
+ROW_KEY_TYPE.ITEM.DOUBLE=Double
+ROW_KEY_TYPE.ITEM.FLOAT=Float
+ROW_KEY_TYPE.ITEM.CHARACTER=Character
+ROW_KEY_TYPE.ITEM.STRING=String
+ROW_KEY_TYPE.ITEM.DATE=Date
+ROW_KEY_TYPE.ITEM.BYTE_ARRAY=byte[]
+ROW_KEY_TYPE.ITEM.BOOLEAN=Boolean
+ROW_KEY_TYPE.ITEM.OBJECT=Object
+ROW_KEY_TYPE.ITEM.SHORT=Short
 SPECIFY_KEYS.NAME=Specify row keys
 SPECIFY_COLUMNS.NAME=Specify columns
+SUPER_COLUMN_TYPE.NAME=Super column type
+SUPER_COLUMN_TYPE.ITEM.INTEGER=Integer
+SUPER_COLUMN_TYPE.ITEM.LONG=Long
+SUPER_COLUMN_TYPE.ITEM.DOUBLE=Double
+SUPER_COLUMN_TYPE.ITEM.FLOAT=Float
+SUPER_COLUMN_TYPE.ITEM.CHARACTER=Character
+SUPER_COLUMN_TYPE.ITEM.STRING=String
+SUPER_COLUMN_TYPE.ITEM.DATE=Date
+SUPER_COLUMN_TYPE.ITEM.BYTE_ARRAY=byte[]
+SUPER_COLUMN_TYPE.ITEM.BOOLEAN=Boolean
+SUPER_COLUMN_TYPE.ITEM.OBJECT=Object
+SUPER_COLUMN_TYPE.ITEM.SHORT=Short
 COLUMNS.NAME=Columns
 SUPER_KEY_COLUMN.NAME=Super columns
 USERNAME.NAME=Username
