fix Bug TDI-22460:Unable to run tELTHiveMap when configure the incoming and outgoing tables with context https://jira.talendforge.org/browse/TDI-22460
git-svn-id: http://talendforge.org/svn/tos/trunk@94047 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tELTHiveOutput/tELTHiveOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tELTHiveOutput/tELTHiveOutput_messages.properties
@@ -15,3 +15,6 @@ FIELD_PARTITION.ITEM.COLUMN_VALUE=Partition Value
 
 NB_LINE_INSERTED.NAME=Number Of Inserted Lines
 NB_LINE_OVERWRITE.NAME=Number Of Overwrite Lines
+
+USE_DIFFERENT_TABLE.NAME=Use different table name
+DIFFERENT_TABLE_NAME.NAME=Table name
