Add CDH3 and MapR1.2 support for Hive and CDH3 for HBase
git-svn-id: http://talendforge.org/svn/tos/trunk@94805 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseOutput/tHBaseOutput_messages.properties
@@ -65,4 +65,5 @@ HBASE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
 HBASE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203 (HBase 0.90.1)
 HBASE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (HBase 0.92.0)
 HBASE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
+HBASE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
 HBASE_VERSION.ITEM.MAPR2=MapR 2.0.0
