Add CDH3 and MapR1.2 support for Hive and CDH3 for HBase
git-svn-id: http://talendforge.org/svn/tos/trunk@94806 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tELTHiveMap/tELTHiveMap_messages.properties
@@ -20,6 +20,8 @@ HIVE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203 (Hive 0.7.1)
 HIVE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Hive 0.9.0)
 HIVE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 HIVE_VERSION.ITEM.MAPR2=MapR 2.0.0
+HIVE_VERSION.ITEM.Cloudera_CDH3=Cloudera CDH3
+HIVE_VERSION.ITEM.MAPR1=MapR 1.2.0
 
 CONNECTION_MODE.NAME=Connection mode
 CONNECTION_MODE.ITEM.EMBEDDED=Embedded
