TDI-24281 fixed: By default, the HCatalog table is not shown anymore.
git-svn-id: http://talendforge.org/svn/tos/trunk@95879 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -55,6 +55,7 @@ HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
+DEFINE_REGISTER_JAR.NAME=Define the jars to register
 REGISTER_JAR.NAME=Register jar
 REGISTER_JAR.ITEM.JAR_NAME=Jar name
 REGISTER_JAR.ITEM.JAR_PATH=Jar path
