TDI-24281 fixed for the tPigStoreResult: By default, the HCatalog table is not shown anymore.
git-svn-id: http://talendforge.org/svn/tos/trunk@96043 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -19,6 +19,7 @@ DATABASE_NAME.NAME=Database
 TABLE_NAME.NAME=Table
 PARTITION_KEYVALUE.NAME=Partition filter
 
+DEFINE_REGISTER_JAR.NAME=Define the jars to register
 REGISTER_JAR.NAME=Register jar
 REGISTER_JAR.ITEM.JAR_NAME=Jar name
 REGISTER_JAR.ITEM.JAR_PATH=Jar path
