--- a/org.talend.oozie.scheduler/plugin.xml
+++ b/org.talend.oozie.scheduler/plugin.xml
@@ -21,5 +21,12 @@
             name="Oozie">
       </page>
    </extension>
+   <extension
+         point="org.talend.core.runtime.classloader_provider">
+      <classloader
+            index="OOZIE:HORTONWORKS:HDP_1_0"
+            libraries="hadoop-core-1.0.0.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;commons-lang-2.4.jar;hdp-dummy.jar">
+      </classloader>
+   </extension>
 
 </plugin>
