TDI-24424: Support a custom loader/storer using custom jars
git-svn-id: http://talendforge.org/svn/tos/trunk@96861 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -41,6 +41,9 @@ LOAD.ITEM.PIGSTORAGE=PigStorage
 LOAD.ITEM.BINSTORAGE=BinStorage
 LOAD.ITEM.TEXTLOADER=TextLoader
 LOAD.ITEM.HCATLOADER=HCatLoader
+LOAD.ITEM.CUSTOM=Custom
+
+CUSTOM_LOADER.NAME=
 
 DIE_ON_ERROR.NAME=Die on subjob error
 
@@ -55,8 +58,8 @@ HADOOP_ADVANCED_PROPERTIES.NAME=Hadoop Properties
 HADOOP_ADVANCED_PROPERTIES.ITEM.PROPERTY=Property
 HADOOP_ADVANCED_PROPERTIES.ITEM.VALUE=Value
 
-DEFINE_REGISTER_JAR.NAME=Define the jars to register
-REGISTER_JAR.NAME=Register jar
+DEFINE_REGISTER_JAR.NAME=Define the jars to register for HCatalog
+REGISTER_JAR.NAME=Register jar for HCatalog
 REGISTER_JAR.ITEM.JAR_NAME=Jar name
 REGISTER_JAR.ITEM.JAR_PATH=Jar path
 
@@ -66,4 +69,7 @@ PARTITION_FILTER.ITEM.PART_VALUE=Partition value
 
 USE_KRB.NAME=Use kerberos authentication
 NAMENODE_PRINCIPAL.NAME=Namenode principal
-JOBTRACKER_PRINCIPAL.NAME=Jobtracker principal
+
+ADVANCED_CONFIGURATION.NAME=Advanced configuration
+DRIVER_JAR.NAME=Register jar
+DRIVER_JAR.ITEM.JAR_NAME=Lib path
