--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -12,6 +12,9 @@ STORE.ITEM.PIGSTORAGE=PigStorage
 STORE.ITEM.BINSTORAGE=BinStorage 
 STORE.ITEM.PIGDUMP=PigDump
 STORE.ITEM.HCATSTORER=HCatStorer
+STORE.ITEM.CUSTOM=Custom
+
+CUSTOM_STORER.NAME=
 
 RM_OUTPUT.NAME=Remove result directory if exists
 
@@ -25,3 +28,7 @@ REGISTER_JAR.ITEM.JAR_NAME=Jar name
 REGISTER_JAR.ITEM.JAR_PATH=Jar path
 
 THRIFT_SERVER.NAME=HCat metastore
+
+ADVANCED_CONFIGURATION.NAME=Advanced configuration
+DRIVER_JAR.NAME=Register jar
+DRIVER_JAR.ITEM.JAR_NAME=Lib path
