Fix Feature TDI-24420 : Support the new HDP version (Bimota) 1.2.0 https://jira.talendforge.org/browse/TDI-24420
git-svn-id: http://talendforge.org/svn/tos/trunk@96883 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tHCatalogOutput/tHCatalogOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHCatalogOutput/tHCatalogOutput_messages.properties
@@ -9,7 +9,8 @@ DISTRIBUTION.NAME=Distribution
 DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
 
 HCAT_VERSION.NAME=HCatalog version
-HCAT_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
+HCAT_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
+HCAT_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 
 HDFS_CONFIGURATION.NAME=HDFS Configuration
 
