--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -16,7 +16,8 @@ DISTRIBUTION.ITEM.MAPR=MapR
 DISTRIBUTION.ITEM.APACHE=Apache
 
 PIG_VERSION.NAME=Version
-PIG_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
+PIG_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
+PIG_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 PIG_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2 (Pig 0.9.1)
 PIG_VERSION.ITEM.CLOUDERA_0.20_CDH3U1=Cloudera 0.20 CDH3U1
 PIG_VERSION.ITEM.MAPR=MapR 1.2.0
