--- a/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHBaseConnection/tHBaseConnection_messages.properties
@@ -20,7 +20,8 @@ DISTRIBUTION.ITEM.APACHE=Apache
 DISTRIBUTION.ITEM.MAPR=MapR
 
 HBASE_VERSION.NAME=HBase version
-HBASE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
+HBASE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
+HBASE_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 HBASE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203 (HBase 0.90.1)
 HBASE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (HBase 0.92.0)
 HBASE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
