--- a/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSOutput/tHDFSOutput_messages.properties
@@ -22,7 +22,8 @@ DB_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2
 DB_VERSION.ITEM.MapR=MapR 1.2.0
 DB_VERSION.ITEM.MapR2=MapR 2.0.0
 DB_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0
-DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
+DB_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
+DB_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 DB_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
 
 FS_DEFAULT_NAME.NAME=NameNode URI
