--- a/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHiveInput/tHiveInput_messages.properties
@@ -35,7 +35,8 @@ DISTRIBUTION.ITEM.CLOUDERA=Cloudera
 DISTRIBUTION.ITEM.MAPR=MapR
 
 HIVE_VERSION.NAME=Hive version
-HIVE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1
+HIVE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
+HIVE_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
 HIVE_VERSION.ITEM.APACHE_0_20_203=Apache 0.20.203 (Hive 0.7.1)
 HIVE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Hive 0.9.0)
 HIVE_VERSION.ITEM.Cloudera_CDH4=Cloudera CDH4
