--- a/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSInput/tHDFSInput_messages.properties
@@ -44,3 +44,9 @@ ROWSEPARATOR.NAME=Row Separator
 FIELDSEPARATOR.NAME=Field Separator
 CUSTOM_ENCODING.NAME=Custom encoding
 ENCODING.NAME=Encoding
+
+UNCOMPRESS.NAME=Uncompress the data
+COMPRESSION.NAME=
+COMPRESSION.ITEM.GZIP=GZIP
+COMPRESSION.ITEM.BZIP2=BZIP2
+COMPRESSION_GROUP.NAME=Compression
