--- a/org.talend.designer.components.bigdata/components/tHDFSRowCount/tHDFSRowCount_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tHDFSRowCount/tHDFSRowCount_messages.properties
@@ -40,3 +40,9 @@ IGNORE_EMPTY_ROW.NAME=Ignore empty rows
 COUNT.NAME=Number of counted lines
 
 CONN.NAME=Connection
+
+UNCOMPRESS.NAME=Uncompress the data
+COMPRESSION.NAME=
+COMPRESSION.ITEM.GZIP=GZIP
+COMPRESSION.ITEM.BZIP2=BZIP2
+COMPRESSION_GROUP.NAME=Compression
