--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -74,3 +74,9 @@ NAMENODE_PRINCIPAL.NAME=Namenode principal
 ADVANCED_CONFIGURATION.NAME=Advanced configuration
 DRIVER_JAR.NAME=Register jar
 DRIVER_JAR.ITEM.JAR_NAME=Lib path
+
+COMPRESS.NAME=Force to compress the output data
+COMPRESSION.NAME=
+COMPRESSION.ITEM.GZIP=GZIP
+COMPRESSION.ITEM.BZIP2=BZIP2
+COMPRESSION_GROUP.NAME=Compression
