Fix Feature TDI-24605 : Allow to use Hbase as an input and an output for Pig components. https://jira.talendforge.org/browse/TDI-24605
git-svn-id: http://talendforge.org/svn/tos/trunk@97817 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigLoad/tPigLoad_messages.properties
@@ -42,6 +42,7 @@ LOAD.ITEM.PIGSTORAGE=PigStorage
 LOAD.ITEM.BINSTORAGE=BinStorage
 LOAD.ITEM.TEXTLOADER=TextLoader
 LOAD.ITEM.HCATLOADER=HCatLoader
+LOAD.ITEM.HBASESTORAGE=HBaseStorage
 LOAD.ITEM.CUSTOM=Custom
 
 CUSTOM_LOADER.NAME=
@@ -80,3 +81,28 @@ COMPRESSION.NAME=
 COMPRESSION.ITEM.GZIP=GZIP
 COMPRESSION.ITEM.BZIP2=BZIP2
 COMPRESSION_GROUP.NAME=Compression
+
+HBASE_CONFIGURATION.NAME=Hbase Configuration
+
+ZOOKEEPER_QUORUM.NAME=Zookeeper quorum 
+ZOOKEEPER_CLIENT_PORT.NAME=Zookeeper client port
+
+HBASE_TABLE.NAME=Table name
+MAPPING.NAME=Mapping
+MAPPING.ITEM.COLUMN=Column
+MAPPING.ITEM.FAMILY_COLUMN=Column family(no need to set it for hbase row key)
+
+HBASESTORAGE_PARAMETER.NAME=HBaseStorage Configuration
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME=NAME
+HBASESTORAGE_PARAMETER.ITEM.PARAM_VALUE=VALUE
+
+LOAD_KEY.NAME=Load key(the first column of schema is ready for hbase row key)
+
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.LOADKEY=loadKey
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.GT=gt
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.GTE=gte
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.LT=lt
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.LTE=lte
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.CACHING=caching
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.LIMIT=limit
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.CASTER=caster
