--- a/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tPigStoreResult/tPigStoreResult_messages.properties
@@ -12,6 +12,7 @@ STORE.ITEM.PIGSTORAGE=PigStorage
 STORE.ITEM.BINSTORAGE=BinStorage 
 STORE.ITEM.PIGDUMP=PigDump
 STORE.ITEM.HCATSTORER=HCatStorer
+STORE.ITEM.HBASESTORAGE=HBaseStorage
 STORE.ITEM.CUSTOM=Custom
 
 CUSTOM_STORER.NAME=
@@ -32,3 +33,45 @@ THRIFT_SERVER.NAME=HCat metastore
 ADVANCED_CONFIGURATION.NAME=Advanced configuration
 DRIVER_JAR.NAME=Register jar
 DRIVER_JAR.ITEM.JAR_NAME=Lib path
+
+HBASE_CONFIGURATION.NAME=Hbase Configuration
+
+ZOOKEEPER_QUORUM.NAME=Zookeeper quorum 
+ZOOKEEPER_CLIENT_PORT.NAME=Zookeeper client port
+
+HBASE_TABLE.NAME=Table name
+MAPPING.NAME=Mapping
+MAPPING.ITEM.COLUMN=Column
+MAPPING.ITEM.FAMILY_COLUMN=Column family(no need to set it when only treat the column as row key)
+
+HBASESTORAGE_PARAMETER.NAME=HBaseStorage Configuration
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME=NAME
+HBASESTORAGE_PARAMETER.ITEM.PARAM_VALUE=VALUE
+
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.LOADKEY=loadKey
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.GT=gt
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.GTE=gte
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.LT=lt
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.LTE=lte
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.CACHING=caching
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.LIMIT=limit
+HBASESTORAGE_PARAMETER.ITEM.PARAM_NAME.ITEM.CASTER=caster
+
+ROWKEY_COLUMN.NAME=Row key column
+CONTAIN_ROW_KEY_COLUMN_IN_HBASE_COLUMN.NAME=Store row key column to hbase column
+
+DISTRIBUTION.NAME=Distribution
+DISTRIBUTION.ITEM.HORTONWORKS=HortonWorks
+DISTRIBUTION.ITEM.CLOUDERA=Cloudera
+DISTRIBUTION.ITEM.MAPR=MapR
+DISTRIBUTION.ITEM.APACHE=Apache
+
+HBASE_VERSION.NAME=Version
+HBASE_VERSION.ITEM.HDP_1_0=Hortonworks Data Platform V1.0.0
+HBASE_VERSION.ITEM.HDP_1_2=Hortonworks Data Platform V1.2.0(Bimota)
+HBASE_VERSION.ITEM.APACHE_0_20_2=Apache 0.20.2 (Pig 0.9.1)
+HBASE_VERSION.ITEM.CLOUDERA_0.20_CDH3U1=Cloudera 0.20 CDH3U1
+HBASE_VERSION.ITEM.MAPR=MapR 1.2.0
+HBASE_VERSION.ITEM.MAPR2=MapR 2.0.0
+HBASE_VERSION.ITEM.APACHE_1_0_0=Apache 1.0.0 (Pig 0.9.2)
+HBASE_VERSION.ITEM.CLOUDERA_CDH4=Cloudera CDH4
