Fix Feature TDI-24752 :Fixe bugs about Couchbase components. https://jira.talendforge.org/browse/TDI-24752
git-svn-id: http://talendforge.org/svn/tos/trunk@98166 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tCouchbaseInput/tCouchbaseInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchbaseInput/tCouchbaseInput_messages.properties
@@ -33,6 +33,7 @@ GROUP_LEVEL.NAME=Group level
 DB_VERSION.NAME=DB Version
 DB_VERSION.ITEM.COUCHBASE_2_0=COUCHBASE 2.0
 LOOP_QUERY.NAME=Loop XPath query
+MAPPING.ITEM.NODECHECK=Get Nodes
 MAPPING.ITEM.SCHEMA_COLUMN=Schema output column
 MAPPING.ITEM.QUERY=XPath query
 MAPPING.NAME=Mapping
