--- a/org.talend.designer.components.bigdata/components/tCouchbaseOutput/tCouchbaseOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tCouchbaseOutput/tCouchbaseOutput_messages.properties
@@ -9,7 +9,7 @@ URIS.ITEM.URI=URI
 DBNAME.NAME=Data Bucket
 USER.NAME=Username
 PASS.NAME=Password
-IS_VIRTUAL_COMPONENT.NAME=Include json document
+IS_VIRTUAL_COMPONENT.NAME=Value is JSON
 EXPIRE.NAME=Expire
 
 DATA_ACTION.ITEM.DELETE=Delete
