Fix Bug TDI-24812 : Add a new text field:"token properties File Name" for tBigQueryBulkExec, tBigQueryInput and tBigQueryOutput https://jira.talendforge.org/browse/TDI-24812
git-svn-id: http://talendforge.org/svn/tos/trunk@98345 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.designer.components.bigdata/components/tBigQueryBulkExec/tBigQueryBulkExec_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tBigQueryBulkExec/tBigQueryBulkExec_messages.properties
@@ -32,6 +32,7 @@ BUCKET_NAME.NAME=Bucket
 GS_CONF.NAME=Google storage configuration
 
 ENCODING.NAME=Encoding
+TOKEN_NAME.NAME=token properties File Name
 SET_FIELD_DELIMITER.NAME=Set the field delimiter
 FIELD_DELIMITER.NAME=
 
