--- a/org.talend.designer.components.bigdata/components/tBigQueryInput/tBigQueryInput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tBigQueryInput/tBigQueryInput_messages.properties
@@ -14,3 +14,5 @@ ENCODING.NAME=Encoding
 ADVANCED_SEPARATOR.NAME=Advanced separator(for number)
 DECIMAL_SEPARATOR.NAME=Decimal separator
 THOUSANDS_SEPARATOR.NAME=Thousands separator
+
+TOKEN_NAME.NAME=token properties File Name
