--- a/org.talend.designer.components.bigdata/components/tBigQueryOutput/tBigQueryOutput_messages.properties
+++ b/org.talend.designer.components.bigdata/components/tBigQueryOutput/tBigQueryOutput_messages.properties
@@ -47,6 +47,8 @@ ENCODING.NAME=Encoding
 SET_FIELD_DELIMITER.NAME=Set the field delimiter
 FIELD_DELIMITER.NAME=
 
+TOKEN_NAME.NAME=token properties File Name
+
 CHECK_DISK_SPACE.NAME=Check disk space
 
 DIE_ON_ERROR.NAME=Die on error
