feature TDI-24445 added : Refactor hdfs and hcatalog to adapt hadoop cluster connection.
git-svn-id: http://talendforge.org/svn/tis_shared/trunk@98653 f6f1c999-d317-4740-80b0-e6d1abc6f99e

--- a/org.talend.repository.hbaseprovider/plugin.xml
+++ b/org.talend.repository.hbaseprovider/plugin.xml
@@ -39,6 +39,10 @@
             libraries="hbase-0.92.0.jar;zookeeper-3.4.2.jar;commons-configuration-1.6.jar;commons-lang-2.4.jar;commons-logging-1.1.1.jar;hadoop-core-1.0.0.jar;log4j-1.2.15.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar">
       </classloader>
       <classloader
+            index="HBASE:HORTONWORKS:HDP_1_2"
+            libraries="hbase-0.94.2.21.jar;zookeeper-3.4.5.21.jar;commons-configuration-1.6.jar;commons-lang-2.5.jar;commons-logging-1.1.1.jar;hadoop-core-1.1.2.21.jar;log4j-1.2.16.jar;slf4j-api-1.4.3.jar;slf4j-log4j12-1.4.3.jar;protobuf-java-2.4.0a.jar">
+      </classloader>
+      <classloader
             index="HBASE:CLOUDERA:Cloudera_CDH4"
             libraries="commons-lang-2.5.jar;commons-logging-1.1.1.jar;commons-configuration-1.6.jar;guava-11.0.2.jar;hadoop-auth-2.0.0-cdh4.0.1.jar;hadoop-common-2.0.0-cdh4.0.1.jar;hbase-0.92.1-cdh4.0.1-security.jar;log4j-1.2.16.jar;slf4j-api-1.6.1.jar;slf4j-log4j12-1.6.1.jar;zookeeper-3.4.3-cdh4.0.1.jar">
       </classloader>
